plugins
{
	id 'java-library'
	id 'java'
 	id 'application'
	id 'com.github.johnrengelman.shadow' version '4.0.4'
}

mainClassName = 'bot.Main'

version '1.2.2'

sourceCompatibility = 11

repositories
{
    jcenter()
    mavenCentral()
}

dependencies
{
    compile 'net.dv8tion:JDA:4.1.0_87'
    compile 'com.sedmelluq:lavaplayer:1.3.32'
    compile 'org.slf4j:slf4j-jdk14:1.7.28'
}

jar
{
    manifest
    {
        attributes 'Main-Class': 'bot.Main'
    }
}
compileJava.options.encoding = 'UTF-8'
